# BITS-CC-Project-1

./: .gitignore  README.md  go.work.sum
TravelManagementSystem/: README.md  pom.xml
TravelManagementSystem/src/main/java/com/springboot/TravelManagementSystem/controller/: BookingController.java  PackageController.java  TicketController.java  UserController.java
TravelManagementSystem/src/main/java/com/springboot/TravelManagementSystem/exceptions/: BookingExceptionHandler.java  GlobalExceptionHandler.java  HotelExceptionHandler.java
TravelManagementSystem/src/main/java/com/springboot/TravelManagementSystem/models/: CurrentUserLoginSession.java  Hotel.java  HotelStatus.java  PackageType.java  Ticket.java  User.java
TravelManagementSystem/src/main/java/com/springboot/TravelManagementSystem/repository/: TicketRepository.java
TravelManagementSystem/src/main/java/com/springboot/TravelManagementSystem/services/: BookingServicesProvider.java  HotelServiceProvider.java  PackageServiceProvider.java  TicketServiceHandler.java  (+2 more)
TravelManagementSystem/src/main/resources/: application.properties
auto-scaler/: Dockerfile  go.mod  go.sum  main.go
auto-scaler/config/: config.go
auto-scaler/docker/: containers.go  network.go
auto-scaler/errors/: errors.go
auto-scaler/scaler/: scaler.go
auto-scaler/scaler/strategy/: strategy.go  threshold_strategy.go  time_series_strategy.go
auto-scaler/util/: constants.go  util.go
auto-scaler/util/net/: net.go
load-balancer/: Dockerfile  go.mod  go.sum  main.go
load-balancer/balancer/: load_balancer.go
load-balancer/balancer/backend/: backend.go
load-balancer/balancer/strategy/: ip_hash.go  least_conns.go  load_balancing_strategy.go  power_of_2.go  random.go  round_robin.go  weighted_round_robin.go
load-balancer/errors/: errors.go
load-balancer/server/: server.go
load-balancer/util/: constants.go  math.go  request.go
services/TravelManagementSystem/: pom.xml
services/TravelManagementSystem/src/main/resources/: application.properties
web-app/: pyproject.toml
web-app/webapp/: .gitignore  README.md  local.yml  production.yml  pyproject.toml  travelms.sql  webapp.db
web-app/webapp/.devcontainer/: devcontainer.json
web-app/webapp/compose/production/traefik/: traefik.yml
web-app/webapp/config/: urls.py
web-app/webapp/config/settings/: base.py  local.py  production.py  test.py
web-app/webapp/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
web-app/webapp/docs/pycharm/: configuration.rst
web-app/webapp/locale/en_US/LC_MESSAGES/: django.po
web-app/webapp/locale/fr_FR/LC_MESSAGES/: django.po
web-app/webapp/locale/pt_BR/LC_MESSAGES/: django.po
web-app/webapp/webapp/: conftest.py
web-app/webapp/webapp/deployment/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
web-app/webapp/webapp/deployment/migrations/: 0001_initial.py
web-app/webapp/webapp/templates/: base.html
web-app/webapp/webapp/templates/deployment/: deployment_detail.html  deployment_form.html  deployment_list.html
web-app/webapp/webapp/users/: adapters.py  admin.py  apps.py  models.py  urls.py  views.py
web-app/webapp/webapp/users/migrations/: 0001_initial.py
web-app/webapp/webapp/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
web-app/webapp/webapp/utils/: docker.py
(+27 files in other folders)
