[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Aayush Jain <aayushjn11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = {version = "4.2.7", extras = ["argon2"]}
gunicorn = "21.2.0"
python-dotenv = "1.0.0"
python-slugify = "8.0.1"
pillow = "10.1.0"
rcssmin = "1.1.1"
whitenoise = "6.6.0"
django-environ = "0.11.2"
django-crispy-forms = "2.1"
crispy-bootstrap5 = "2023.10"
django-compressor = "4.4"
django-allauth = "^0.58.2"
docker = "^6.1.3"
tomlkit = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
reorder-python-imports = "^3.12.0"
flake8 = "^6.1.0"
djlint = "^1.34.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.6"}

# ==== pytest ====
pylint-django = "^2.5.5"
pre-commit = "^3.5.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["webapp/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]


# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "webapp",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"


# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
]
django-settings-module = "config.settings.local"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]


# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
